etc/iptables/rules.v6
# Generated by iptables-save v1.8.2 on Tue Oct 12 11:58:29 2021
*nat
:PREROUTING ACCEPT [858:79990]
:INPUT ACCEPT [188:37153]
:OUTPUT ACCEPT [36:2362]
:POSTROUTING ACCEPT [36:2362]
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.64.32.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.255.255.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Oct 12 11:58:29 2021
# Generated by iptables-save v1.8.2 on Tue Oct 12 11:58:29 2021
*filter
:INPUT ACCEPT [55089:64893050]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [41099:4976801]
-A INPUT -i gt-tun0 -j ACCEPT
-A INPUT -i gt-tun1 -j ACCEPT
-A INPUT -i gt-tun2 -j ACCEPT
-A INPUT -i gt-tun3 -j ACCEPT
-A INPUT -i gt-tun4 -j ACCEPT
-A INPUT -i gt-tun5 -j ACCEPT
-A INPUT -i gt-tun6 -j ACCEPT
-A INPUT -i gt-tun7 -j ACCEPT
-A INPUT -i gt-tun8 -j ACCEPT
-A INPUT -i gt-tun9 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 1194 -j ACCEPT
-A INPUT -i tun-openvpn -j ACCEPT
-A FORWARD -i gt-tun0 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun1 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun2 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun3 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun4 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun5 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun6 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun7 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun8 -o eth0 -j ACCEPT
-A FORWARD -i gt-tun9 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun0 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun1 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun2 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun3 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun4 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun5 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun6 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun7 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun8 -j ACCEPT
-A FORWARD -i eth0 -o gt-tun9 -j ACCEPT
-A FORWARD -i tun-openvpn -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o tun-openvpn -j ACCEPT
-A FORWARD -i tun0 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o tun0 -j ACCEPT
COMMIT
# Completed on Tue Oct 12 11:58:29 2021
